fixed application css(wrap-info)

--- a/styles/application.css
+++ b/styles/application.css
@@ -39,7 +39,7 @@
         flex-direction: column;
     }
 
-    .application-wrap-info{
+    .application-wrap{
         padding: 0px 16px 0px 16px;
     }
 }
